--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">NavigatorApp</string>
     <string name="facebook_app_id" tools:ignore="ResourceCycle">@string/facebook_app_id</string>
     <string name="facebook_client_token" tools:ignore="ResourceCycle">@string/facebook_client_token</string>
+    <string name="TRANSISTORSOFT_LICENSE_KEY"></string>
+    <string name="FACEBOOK_APP_ID"></string>
+    <string name="FACEBOOK_CLIENT_TOKEN"></string>
+    <string name="GOOGLE_MAPS_API_KEY"></string>
 </resources>
